cdbs (0.4.48) unstable; urgency=medium

  * Reverse patches before cleaning build directory (simple-patchsys.mk)
    (closes: #387103)

 -- Peter Eisentraut <petere@debian.org>  Sat, 16 Dec 2006 17:08:29 +0100

cdbs (0.4.47) unstable; urgency=low

  * Replaced db2latex-xsl by dblatex for documentation build (patch by
    Frank Küster) (closes: #393665)

 -- Peter Eisentraut <petere@debian.org>  Thu, 26 Oct 2006 12:21:40 +0200

cdbs (0.4.46) unstable; urgency=high

  * Changed patch stamp file naming scheme to handle equally named patches
    in different directories (simple-patchsys.mk) (closes: #380499)

 -- Peter Eisentraut <petere@debian.org>  Thu,  3 Aug 2006 19:43:44 +0200

cdbs (0.4.45) unstable; urgency=medium

  * Added support for user-defined CC and CXX in qmake class
  * Fixed diff call yielding false positives in list-missing rule
    (utils.mk) (closes: #378013); test case in list-missing-1.sh
  * Fixed bashisms in utils.mk
  * Fixed bashism in python-distutils.mk
  * Call dh_py* for all packages in new Python policy section
    (python-distutils.mk) (closes: #377965)
  * Make use of per-patch stamp files and don't ignore failed patch
    reversals (simple-patchsys.mk) (closes: #372682)
  * Removed some redundant autotools use, since we know our target platform
    pretty well
  * Updated debian/copyright, removed redundant AUTHORS file
  * Updated TODO

 -- Peter Eisentraut <petere@debian.org>  Sat, 29 Jul 2006 17:18:57 +0200

cdbs (0.4.44) unstable; urgency=medium

  * Shortened uploaders list
  * Added gs-common build dependency (closes: #375464)
  * Disabled ant-1 test while kaffe is broken (see #376336)
  * Removed weird garbage file left in last upload

 -- Peter Eisentraut <petere@debian.org>  Mon,  3 Jul 2006 17:46:43 +0200

cdbs (0.4.43) unstable; urgency=low

  * Python class update (Closes: #374809):
    + support latest pysupport features (mainly .so support).
    + use pyversions improvements to simplify the code.